--- a/MyAppPoema/app/src/main/AndroidManifest.xml
+++ b/MyAppPoema/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.MyAppPoema"
         tools:targetApi="31">
         <activity
+            android:name=".MainActivityXX"
+            android:exported="false" />
+        <activity
             android:name=".MainActivityXVIII"
             android:exported="false" />
         <activity
