--- a/MyAppPinturas/app/src/main/AndroidManifest.xml
+++ b/MyAppPinturas/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.MyAppPinturas"
         tools:targetApi="31">
         <activity
+            android:name=".MainConfirmaCompra"
+            android:exported="false" />
+        <activity
             android:name=".MainCompra"
             android:exported="false" />
         <activity
