--- a/MyAppSwLocal/app/src/main/AndroidManifest.xml
+++ b/MyAppSwLocal/app/src/main/AndroidManifest.xml
@@ -17,6 +17,15 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".MAEliminarSW"
+            android:exported="false" />
+        <activity
+            android:name=".MAActualizarSw"
+            android:exported="false" />
+        <activity
+            android:name=".MAListarMostrarSW"
+            android:exported="false" />
+        <activity
             android:name=".MABuscarIdSW"
             android:exported="false" />
         <activity
